--- a/SolidPlanner/app/src/main/res/values/strings.xml
+++ b/SolidPlanner/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="email">Correo electrónico</string>
     <string name="password">Contraseña</string>
     <string name="password2">Confirmar Contraseña</string>
+    <string name="message">Bienvenido a SolidPlanner</string>
+    <string name="logout">Cerrar Sesión</string>
 </resources>
